--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@mantine/core": "7.17.2",
     "@mantine/hooks": "7.17.2",
+    "@mantinex/mantine-logo": "^1.1.0",
+    "@tabler/icons-react": "^3.31.0",
     "next": "15.2.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "22.13.11",
