--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,9 +25,10 @@
     ]
   },
   "include": [
+    "**/**/*.ts",
+    "**/**/*.tsx",
+    ".next/types/**/**/*.ts",
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
     ".next/types/**/*.ts"
   ],
   "exclude": [
