--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gitpull": "git pull origin main"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.31.0",
     "concurrently": "^9.1.2"
   }
 }
